$Id: NEWS,v 1.221 2002-09-06 18:05:23 castaglia Exp $

CVS
---------------------------------
- Bug 1649 - setproctitle() prepends and appends process name
- Bug 1666 - Auth modules can return duplicate supplemental groups
- Bug 1654 - Add DESTDIR in Makefile
- Bug 1682 - Broken SyslogFacility requires custom syslog code
- Bug 1076 - Toggle parsing of .ftpaccess files with a AllowOverride
- Bug 1724 - AuthPAM off does not work beginning 1.2.5
- Bug 1592 - mod_sql doesn't cache failed uid lookups
- Bug 1719 - Add RFC2228 stuff to distribution
- Bug 1663 - Add SITE CHGRP command
- Bug 1725 - disconnect when specify multiple ranges on Allow
- Bug 1253 - No ability to configure address for main server
- Bug 1432 - Pedantic handling of leading whitespace in FTP commands

1.2.6 - Released 2002-09-04
---------------------------------
New mod_ldap (2.8.10)
- Fixed bug in matching of IP addresses introduced by Bug#1701

1.2.6rc2 - Released 2002-08-15
---------------------------------
- Bug 1681 - Fixed bug made when adding <IfDefine>, <IfModule> support
- Bug 1645 - Changed ordering of close() of HiddenStor files slightly
- Bug 1674 - Changed timing of allocation of dynamic buffer (to avoid segfaults)
             in the supplied fgetgrent() function, which is used for
             AuthGroupFiles under FreeBSD.
- Bug 1697 - Fixed memory leak involving allocated regex_t *s and SIGHUP
- Bug 1701 - Fixed/enhanced name/IP matching function by adding matching of
             ip1/ip2 to function; it was just name1/name2, name1/ip2 matching.

1.2.6rc1 - Released 2002-07-02
---------------------------------
- Bug 1407 - Removed unnecessary check for prior PORT/PASV in STOR
             PRE_CMD handler (RETR PRE_CMD handler did not have these checks)
- Added new Define, <IfDefine>, <IfModule> configuration directives, new
  command-line option -D (a la Apache)
- Bug 1556 - Restructuring the way signals are handled, so that signal handling